fix white space

--- a/roostergrin/src/assets/scss/sections/section5.scss
+++ b/roostergrin/src/assets/scss/sections/section5.scss
@@ -8,12 +8,12 @@
       padding: 6rem 1rem 1rem 3rem;
     }
     @media screen and (max-width: map-get($breakpoints, large)) {
-      margin: 2rem auto;
+      margin: 0;
       padding: 1rem auto;
       text-align: center;
     }
     @media screen and (max-width: map-get($breakpoints, medium)) {
-      margin: auto 1.5rem ;
+      margin:0 ;
       padding: 2rem 0;
       text-align: center;
     }
